force/src/objects/Defect__c.object
<CustomObject>
    <description>TOOLKIT - This object represents a failure to meet a requirement.</description>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cause_of_Defect__c</fullName>
        <label>Cause of Defect</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Issue</fullName>
                </value>
                <value>
                    <fullName>Change in Requirement</fullName>
                </value>
                <value>
                    <fullName>Deployment Issue</fullName>
                </value>
                <value>
                    <fullName>FLS Issue</fullName>
                </value>
                <value>
                    <fullName>Incomplete Input</fullName>
                </value>
                <value>
                    <fullName>Incomplete Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Inconsistency</fullName>
                </value>
                <value>
                    <fullName>Incorrect/Invalid Input</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Lack of Clarity</fullName>
                </value>
                <value>
                    <fullName>Logic</fullName>
                </value>
                <value>
                    <fullName>Memory management</fullName>
                </value>
                <value>
                    <fullName>Misunderstood Requirement</fullName>
                </value>
                <value>
                    <fullName>Naming Convention</fullName>
                </value>
                <value>
                    <fullName>Not Testable</fullName>
                </value>
                <value>
                    <fullName>Not Verfiable</fullName>
                </value>
                <value>
                    <fullName>Oversight</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Portability</fullName>
                </value>
                <value>
                    <fullName>Profile Issue</fullName>
                </value>
                <value>
                    <fullName>Redundant Code</fullName>
                </value>
                <value>
                    <fullName>Requirements Missed</fullName>
                </value>
                <value>
                    <fullName>Reusability</fullName>
                </value>
                <value>
                    <fullName>Standards</fullName>
                </value>
                <value>
                    <fullName>Storage structure</fullName>
                </value>
                <value>
                    <fullName>Test Data</fullName>
                </value>
                <value>
                    <fullName>Test Setup</fullName>
                </value>
                <value>
                    <fullName>Traceability</fullName>
                </value>
                <value>
                    <fullName>User Interface</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component_Detail__c</fullName>
        <label>Component Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom Buttons or Links</fullName>
                </value>
                <value>
                    <fullName>Custom Functionality / Code</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>ETL</fullName>
                </value>
                <value>
                    <fullName>Fields</fullName>
                </value>
                <value>
                    <fullName>List Views</fullName>
                </value>
                <value>
                    <fullName>Page Layouts</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Security / Permissions</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Workflow &amp; Approvals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Knowledge</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Quest</fullName>
                </value>
                <value>
                    <fullName>Report / Dashboard</fullName>
                </value>
                <value>
                    <fullName>Role Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Search</fullName>
                </value>
                <value>
                    <fullName>Users</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Detected__c</fullName>
        <label>Defect Detected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requirement Stage</fullName>
                </value>
                <value>
                    <fullName>Design Stage</fullName>
                </value>
                <value>
                    <fullName>Design Review</fullName>
                </value>
                <value>
                    <fullName>Build Stage</fullName>
                </value>
                <value>
                    <fullName>Build Review</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Post Go-Live</fullName>
                </value>
                <value>
                    <fullName>Code Review</fullName>
                </value>
                <value>
                    <fullName>Test Script Review</fullName>
                </value>
                <value>
                    <fullName>Regression Testing</fullName>
                </value>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Type__c</fullName>
        <label>Defect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Design Defect</fullName>
                </value>
                <value>
                    <fullName>Data Validation</fullName>
                </value>
                <value>
                    <fullName>General Support</fullName>
                </value>
                <value>
                    <fullName>General Access</fullName>
                </value>
                <value>
                    <fullName>Not a Defect</fullName>
                </value>
                <value>
                    <fullName>Code Review Defect</fullName>
                </value>
                <value>
                    <fullName>Test Script Review Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <label>Developer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recreate__c</fullName>
        <inlineHelpText>Provide an example and steps to recreate the defect.</inlineHelpText>
        <label>Steps to Recreate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Name__c</fullName>
        <formula>Related_Request__r.Planned_Release__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reported By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retest_Status__c</fullName>
        <label>Retest Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retesting_Comments__c</fullName>
        <label>Retesting Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Developer Assigned</fullName>
                </value>
                <value>
                    <fullName>Fix in Process</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Cannot Reproduce</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Open Salesforce.com Request</fullName>
                </value>
                <value>
                    <fullName>Future Enhancement Consideration</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com Limitation</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Execution</label>
        <referenceTo>Test_Execution__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>Peer Review</fullName>
                </value>
                <value>
                    <fullName>System Test</fullName>
                </value>
                <value>
                    <fullName>Integration Test</fullName>
                </value>
                <value>
                    <fullName>Migration Test</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Client Team QA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Script__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script</label>
        <referenceTo>Test_Script__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Type__c</fullName>
        <label>Testing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration Test</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>System Test</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Component__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Testing_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Environment__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>Related_Request__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Reported_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Future Enhancement Consideration,Resolved,Withdrawn,Salesforce.com Limitation</value>
        </filters>
        <label>All Open Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects_Enhancements</fullName>
        <columns>NAME</columns>
        <columns>Related_Request__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Reported_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Salesforce.com Limitation</value>
        </filters>
        <label>All Open Defects &amp; Enhancements</label>
    </listViews>
    <listViews>
        <fullName>Release_2_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Component__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Developer_Assigned__c</columns>
        <columns>Testing_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Resolved,Withdrawn</value>
        </filters>
        <label>Release 2 Defects</label>
    </listViews>
    <listViews>
        <fullName>Release_3_ALL_Defects</fullName>
        <columns>NAME</columns>
        <columns>Defect_Type__c</columns>
        <columns>Defect_Detected__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Cause_of_Defect__c</columns>
        <columns>Status__c</columns>
        <columns>Developer_Comments__c</columns>
        <columns>Related_Request__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Name__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <label>Release 3 ALL Defects</label>
    </listViews>
    <listViews>
        <fullName>Release_5_Defects</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Detailed_Description__c</columns>
        <columns>Related_Request__c</columns>
        <columns>Test_Script__c</columns>
        <columns>Component_Detail__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Reported_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release_Name__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5 Defects</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>